--- a/01-Simon_Collison/woohree.html
+++ b/01-Simon_Collison/woohree.html
@@ -38,8 +38,123 @@
     </ul>
   </nav>
 
+  
   <div class="content">
     <div class="content-title">Articles</div>
+    <div class="content-container">
+      <div class="content-container-item">
+        <div class="item-img">
+          <img class="item-img" src="dummy2.jpg" alt="thumbnail">
+          <div class="item-img-sub">03th April, 2022 / CSS</div>
+        </div>
+        <div class="item-sub">
+          <div class="item-sub-title">CSS by woohree</div>
+          <div class="item-sub-sub">
+            I was delighted to be the first guest on Matt Davey’s new podcast. It was an opportunity to reflect on my career path and attitude to design, and choose five songs that really mean something to me.
+          </div>
+        </div>
+      </div>
+      <div class="content-container-item">
+        <div class="item-img">
+          <img class="item-img" src="dummy2.jpg" alt="thumbnail">
+          <div class="item-img-sub">03th April, 2022 / CSS</div>
+        </div>
+        <div class="item-sub">
+          <div class="item-sub-title">CSS by woohree</div>
+          <div class="item-sub-sub">
+            I was delighted to be the first guest on Matt Davey’s new podcast. It was an opportunity to reflect on my career path and attitude to design, and choose five songs that really mean something to me.
+          </div>
+        </div>
+      </div>
+      <div class="content-container-item">
+        <div class="item-img">
+          <img class="item-img" src="dummy2.jpg" alt="thumbnail">
+          <div class="item-img-sub">03th April, 2022 / CSS</div>
+        </div>
+        <div class="item-sub">
+          <div class="item-sub-title">CSS by woohree</div>
+          <div class="item-sub-sub">
+            I was delighted to be the first guest on Matt Davey’s new podcast. It was an opportunity to reflect on my career path and attitude to design, and choose five songs that really mean something to me.
+          </div>
+        </div>
+      </div>
+      <div class="content-container-item">
+        <div class="item-img">
+          <img class="item-img" src="dummy2.jpg" alt="thumbnail">
+          <div class="item-img-sub">03th April, 2022 / CSS</div>
+        </div>
+        <div class="item-sub">
+          <div class="item-sub-title">CSS by woohree</div>
+          <div class="item-sub-sub">
+            I was delighted to be the first guest on Matt Davey’s new podcast. It was an opportunity to reflect on my career path and attitude to design, and choose five songs that really mean something to me.
+          </div>
+        </div>
+      </div>
+      <div class="content-container-item">
+        <div class="item-img">
+          <img class="item-img" src="dummy2.jpg" alt="thumbnail">
+          <div class="item-img-sub">03th April, 2022 / CSS</div>
+        </div>
+        <div class="item-sub">
+          <div class="item-sub-title">CSS by woohree</div>
+          <div class="item-sub-sub">
+            I was delighted to be the first guest on Matt Davey’s new podcast. It was an opportunity to reflect on my career path and attitude to design, and choose five songs that really mean something to me.
+          </div>
+        </div>
+      </div>
+      <div class="content-container-item">
+        <div class="item-img">
+          <img class="item-img" src="dummy2.jpg" alt="thumbnail">
+          <div class="item-img-sub">03th April, 2022 / CSS</div>
+        </div>
+        <div class="item-sub">
+          <div class="item-sub-title">CSS by woohree</div>
+          <div class="item-sub-sub">
+            I was delighted to be the first guest on Matt Davey’s new podcast. It was an opportunity to reflect on my career path and attitude to design, and choose five songs that really mean something to me.
+          </div>
+        </div>
+      </div>
+      <div class="content-container-item">
+        <div class="item-img">
+          <img class="item-img" src="dummy2.jpg" alt="thumbnail">
+          <div class="item-img-sub">03th April, 2022 / CSS</div>
+        </div>
+        <div class="item-sub">
+          <div class="item-sub-title">CSS by woohree</div>
+          <div class="item-sub-sub">
+            I was delighted to be the first guest on Matt Davey’s new podcast. It was an opportunity to reflect on my career path and attitude to design, and choose five songs that really mean something to me.
+          </div>
+        </div>
+      </div>
+      <div class="content-container-item">
+        <div class="item-img">
+          <img class="item-img" src="dummy2.jpg" alt="thumbnail">
+          <div class="item-img-sub">03th April, 2022 / CSS</div>
+        </div>
+        <div class="item-sub">
+          <div class="item-sub-title">CSS by woohree</div>
+          <div class="item-sub-sub">
+            I was delighted to be the first guest on Matt Davey’s new podcast. It was an opportunity to reflect on my career path and attitude to design, and choose five songs that really mean something to me.
+          </div>
+        </div>
+      </div>
+      <div class="content-container-item">
+        <div class="item-img">
+          <img class="item-img" src="dummy2.jpg" alt="thumbnail">
+          <div class="item-img-sub">03th April, 2022 / CSS</div>
+        </div>
+        <div class="item-sub">
+          <div class="item-sub-title">CSS by woohree</div>
+          <div class="item-sub-sub">
+            I was delighted to be the first guest on Matt Davey’s new podcast. It was an opportunity to reflect on my career path and attitude to design, and choose five songs that really mean something to me.
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="side">
+      Stream <br>
+      여기부터 다음!
+    </div>
   </div>
 </body>
 </html>
