side까지 마무리

--- a/01-Simon_Collison/woohree.html
+++ b/01-Simon_Collison/woohree.html
@@ -38,9 +38,8 @@
     </ul>
   </nav>
 
-  
+  <div class="content-title">Articles</div>
   <div class="content">
-    <div class="content-title">Articles</div>
     <div class="content-container">
       <div class="content-container-item">
         <div class="item-img">
@@ -151,9 +150,71 @@
         </div>
       </div>
     </div>
+
     <div class="side">
-      Stream <br>
-      여기부터 다음!
+      <div class="side-item">
+        <div class="side-item-title">Stream</div>
+        <div class="side-item-sub">
+          For an almost daily dump of ideas, observations, quotes, travel notes, and consumed culture, check out my Stream →
+        </div>
+      </div>
+      <div class="side-item2">
+        <div class="side-item-title">Filter by tag</div>
+        <div class="side-item-tags">
+          <div class="side-item-tag-title">Faves and examples</div>
+          <div class="side-tag-item">Year In Music</div>
+          <div class="side-tag-item">New Adventures</div>
+          <div class="side-tag-item">Internet Of Natural Things</div>
+          <div class="side-tag-item">Japan</div>
+          <div class="side-tag-item">Iceland</div>
+          <div class="side-tag-item">Covid-19</div>
+          <div class="side-tag-item">Race</div>
+        </div>
+        <div class="side-item-tags">
+          <div class="side-item-tag-title">Content types</div>
+          <div class="side-tag-item">Essay</div>
+          <div class="side-tag-item">Review</div>
+          <div class="side-tag-item">Audio</div>
+          <div class="side-tag-item">Video</div>
+          <div class="side-tag-item">List</div>
+          <div class="side-tag-item">Notes</div>
+          <div class="side-tag-item">Photos</div>
+          <div class="side-tag-item">Instagram</div>
+          <div class="side-tag-item">Setlist</div>
+        </div>
+        <div class="side-item-tags">
+          <div class="side-item-tag-title">News</div>
+          <div class="side-tag-item">Personal</div>
+          <div class="side-tag-item">Events</div>
+          <div class="side-tag-item">Writing</div>
+          <div class="side-tag-item">Speaking</div>
+          <div class="side-tag-item">Interview</div>
+        </div>
+        <div class="side-item-tags">
+          <div class="side-item-tag-title">Culture & humanities</div>
+          <div class="side-tag-item">Design</div>
+          <div class="side-tag-item">Music</div>
+          <div class="side-tag-item">Art</div>
+          <div class="side-tag-item">Books</div>
+          <div class="side-tag-item">Film & TV</div>
+          <div class="side-tag-item">Web</div>
+          <div class="side-tag-item">Games</div>
+          <div class="side-tag-item">Philosophy</div>
+          <div class="side-tag-item">Psychology</div>
+        </div>
+        <div class="side-item-tags">
+          <div class="side-item-tag-title">Culture & humanities</div>
+          <div class="side-tag-item">Environment</div>
+          <div class="side-tag-item">Ecology</div>
+          <div class="side-tag-item">Nature</div>
+          <div class="side-tag-item">Politics</div>
+          <div class="side-tag-item">Ethics</div>
+          <div class="side-tag-item">Technology</div>
+          <div class="side-tag-item">Future</div>
+          <div class="side-tag-item">Society</div>
+          <div class="side-tag-item">Science</div>
+        </div>
+      </div>
     </div>
   </div>
 </body>
