--- a/01-Simon_Collison/woohree.html
+++ b/01-Simon_Collison/woohree.html
@@ -217,5 +217,54 @@
       </div>
     </div>
   </div>
+  <button class="older">← OLDER</button>
+
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-content-item">
+        <div class="footer-content-item-top">
+          <div class="footer-item-top-title">ELSEWHERE</div>
+          <div class="footer-item-top-sub">
+            Follow me or send an email.
+          </div>
+        </div>
+        <div class="footer-content-item-bottom">
+          <img src="dummy2.jpg" alt="" class="footer-item-bottom-img">
+          <img src="dummy2.jpg" alt="" class="footer-item-bottom-img">
+          <img src="dummy2.jpg" alt="" class="footer-item-bottom-img">
+          <img src="dummy2.jpg" alt="" class="footer-item-bottom-img">
+          <img src="dummy2.jpg" alt="" class="footer-item-bottom-img">
+        </div>
+      </div>
+      <div class="footer-content-item">
+        <div class="footer-content-item-top">
+          <div class="footer-item-top-title">SUBSCRIBE</div>
+          <div class="footer-item-top-sub">
+            I’ll send you something every once in a while.
+          </div>
+        </div>
+        <div class="footer-content-item-bottom">
+          <img src="dummy3.jpg" alt="" class="footer-item-bottom-img-center">
+        </div>
+      </div>
+      <div class="footer-content-item">
+        <div class="footer-content-item-top">
+          <div class="footer-item-top-title">MISS THE OLD SITE?</div>
+          <div class="footer-item-top-sub">
+            v4 design is archived here.
+          </div>
+        </div>
+        <div class="footer-content-item-bottom">
+          <div class="footer-item-bottom-right">
+            “Don’t make that masterpiece go away. We have so little left of what was glorious.”—Zeldman
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer-sub">
+      <div class="footer-sub-top">2022 CSS by Woohree.</div>
+      <a href="https://github.com/woohree" class="footer-sub-a">github.com/woohree</a>
+    </div>
+  </footer>
 </body>
 </html>
